--- a/app/views/layouts/forms/fields/_date.html.erb
+++ b/app/views/layouts/forms/fields/_date.html.erb
@@ -1,12 +1,8 @@
-<%= fields_for form_prefix, record do |f| %>
-  <%= render "layouts/forms/fields/label", label: opts[:label], form_prefix: form_prefix, record: record, attribute: opts[:attribute] %>
-  <% if record.respond_to?("#{opts[:attribute].to_s}_bitmask".to_sym)%>
-    <%= select_year((record.send("#{opts[:attribute].to_s}_bitmask").nil? || record.send("#{opts[:attribute].to_s}_bitmask") & 1 == 0) ? record.send(opts[:attribute]).try(:year) : Date.new(10), start_year: 1970, end_year: Date.today.year, prefix: form_prefix, field_name: "#{opts[:attribute]}(1i)", include_blank: true)%>
-    <%= select_month((record.send("#{opts[:attribute].to_s}_bitmask").nil? || record.send("#{opts[:attribute].to_s}_bitmask") & 2 == 0) ? record.send(opts[:attribute]).try(:month) : 13, prefix: form_prefix, field_name: "#{opts[:attribute]}(2i)", include_blank: true)%>
-    <%= select_day((record.send("#{opts[:attribute].to_s}_bitmask").nil? || record.send("#{opts[:attribute].to_s}_bitmask") & 4 == 0) ? record.send(opts[:attribute]).try(:day) : 40, prefix: form_prefix, field_name: "#{opts[:attribute]}(3i)", include_blank: true)%>
-  <% else %>
-    <%= select_year(record.send(opts[:attribute]).try(:year), start_year: 1970, end_year: Date.today.year, prefix: form_prefix, field_name: "#{opts[:attribute]}(1i)", include_blank: true)%>
-    <%= select_month(record.send(opts[:attribute]).try(:month), prefix: form_prefix, field_name: "#{opts[:attribute]}(2i)", include_blank: true)%>
-    <%= select_day(record.send(opts[:attribute]).try(:day), prefix: form_prefix, field_name: "#{opts[:attribute]}(3i)", include_blank: true)%>
+<div>
+  <%= f.fields_for attribute do |c| %>
+    <%= c.label attribute, "#{attribute.to_s.titleize}:" %>
+    <%= c.select "#{attribute}(1i)", (1970)..(Date.current.year + 3), selected: f.object.send(attribute)["#{attribute}(1i)"], include_blank: true %>
+    <%= c.select "#{attribute}(2i)", (1..12).to_a.map {|i| [I18n.t("date.month_names")[i], i]}, selected: f.object.send(attribute)["#{attribute}(2i)"], include_blank: true %>
+    <%= c.select "#{attribute}(3i)", 1..31, selected: f.object.send(attribute)["#{attribute}(3i)"], include_blank: true %>
   <% end %>
-<% end %>
+</div>
